<resources>
    <string name="app_name">Wipey</string>
    <string name="app_policy_admin_name">Wipey Receiver</string>

    <string name="setup_amount_password_retries">Amount of password retries</string>
    <string name="device_admin_activation_message">Wipey needs to become a device administrator for enabling the wipe data mode in android.</string>

    <string name="excecute">Execute</string>

    <string name="successfully_activated_wipe">Successfully activated wipe data after %d retries!</string>
    <string name="successfully_activated_reboot">Successfully activated reboot data after %d retries!</string>

    <string name="usage">If the limit is reached,</string>

    <string name="wipe_data">wipe data</string>
    <string name="reboot">only reboot</string>
</resources>
