<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/side_padding"
            android:paddingRight="@dimen/side_padding"
            android:paddingTop="@dimen/top_padding">
            <!-- Amount password retries -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:text="@string/setup_amount_password_retries"
                android:textSize="@dimen/text_size_small"/>

            <EditText
                android:id="@+id/amount_failed_passwords_for_wipe"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setup_amount_password_retries"
                android:inputType="number"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="@dimen/side_padding"
                android:paddingRight="@dimen/side_padding"
                android:paddingTop="15dp"
                android:text="@string/usage"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/wipe_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wipe_data"/>

                <RadioButton
                    android:id="@+id/reboot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/setup_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/side_padding"
        android:paddingRight="@dimen/side_padding"
        android:textSize="@dimen/text_size_medium"/>

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/top_padding"
        android:minWidth="200dp"
        android:text="@string/excecute"/>

</LinearLayout>
